--- a/cargo.toml
+++ b/cargo.toml
@@ -12,6 +12,7 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 wasm-bindgen = "0.2.70"
 js-sys = "0.3.47"
+hex = "0.4.2"
 
 [dependencies.web-sys]
 version = "0.3.4"
